--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
 {
-  "name": "discographysearch",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "node-sass": "^4.13.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "discographysearch-server",
+    "version": "1.0.0",
+    "engines": {
+        "node": "8.11.3",
+        "npm": "6.12.0"
+    },
+    "scripts": {
+        "client": "cd client && npm start",
+        "server": "nodemon server.js",
+        "build": "cd client && npm run build",
+        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+        "start": "node server.js",
+        "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "request": "^2.88.0"
+    },
+    "devDependencies": {
+        "concurrently": "^5.0.0"
+    }
 }
